Change title and update Open Graph images
Updated title and image references for SEO and branding.

--- a/index.html
+++ b/index.html
@@ -1,27 +1,37 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TARA - HR Performance Review Voice Assistant</title>
+    <title>TalentSpotify - VoiceAssistant</title>
+
+    <!-- Description & SEO -->
     <meta name="description" content="TARA is an AI-powered voice assistant for conducting three-way performance reviews between employees, managers, and HR." />
     <meta name="author" content="TalentSpotify" />
     <meta name="keywords" content="HR, performance review, voice assistant, OKR, feedback, talent management" />
 
+    <!-- Open Graph (OG) for social sharing -->
     <meta property="og:title" content="TARA - HR Performance Review Voice Assistant" />
     <meta property="og:description" content="AI-powered three-way performance reviews with natural conversation, instant insights, and personalized feedback." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/logo.jpg" />
 
+    <!-- Twitter card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@TalentSpotify" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    
+    <meta name="twitter:image" content="/logo.jpg" />
+
+    <!-- Favicon for browser tab -->
+    <link rel="icon" type="image/jpeg" href="/logo.jpg" />
+
+    <!-- Canonical URL -->
     <link rel="canonical" href="https://talentspotify.com/tara" />
   </head>
 
   <body>
     <div id="root"></div>
+
+    <!-- Vite entry point -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
