--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta name="twitter:image" content="/logo.jpg" />
 
     <!-- Favicon for browser tab -->
-    <link rel="icon" type="image/jpeg" href="/logo.jpg" />
+    <link rel="icon" type="image/jpeg" href="/favicon.ico" />
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://talentspotify.com/tara" />
@@ -30,6 +30,11 @@
 
   <body>
     <div id="root"></div>
+
+    <!-- Vite entry point -->
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html>
 
     <!-- Vite entry point -->
     <script type="module" src="/src/main.tsx"></script>
