Update favicon link to use favicon1.png

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta name="twitter:image" content="/logo.jpg" />
 
     <!-- Favicon for browser tab -->
-    <link rel="icon" type="image/jpeg" href="/favicon.ico" />
+    <link rel="icon" type="image/jpeg" href="/favicon1.png" />
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://talentspotify.com/tara" />
